--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -20,7 +20,7 @@ firm-textured, round yolk that is bright orange-red in color.</p>
     >
       <a
     class="gatsby-resp-image-link"
-    href="/static/8058f3f26913fea3b6a89a73344fe94a/e1596/salty_egg.jpg"
+    href="/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/e1596/salty_egg.jpg"
     style="display: block"
     target="_blank"
     rel="noopener"
@@ -33,13 +33,13 @@ firm-textured, round yolk that is bright orange-red in color.</p>
         class="gatsby-resp-image-image"
         alt="Chinese Salty Egg"
         title="Chinese Salty Egg"
-        src="/static/8058f3f26913fea3b6a89a73344fe94a/828fb/salty_egg.jpg"
-        srcset="/static/8058f3f26913fea3b6a89a73344fe94a/ff44c/salty_egg.jpg 158w,
-/static/8058f3f26913fea3b6a89a73344fe94a/a6688/salty_egg.jpg 315w,
-/static/8058f3f26913fea3b6a89a73344fe94a/828fb/salty_egg.jpg 630w,
-/static/8058f3f26913fea3b6a89a73344fe94a/0ede0/salty_egg.jpg 945w,
-/static/8058f3f26913fea3b6a89a73344fe94a/3ac88/salty_egg.jpg 1260w,
-/static/8058f3f26913fea3b6a89a73344fe94a/e1596/salty_egg.jpg 2048w"
+        src="/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/828fb/salty_egg.jpg"
+        srcset="/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/ff44c/salty_egg.jpg 158w,
+/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/a6688/salty_egg.jpg 315w,
+/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/828fb/salty_egg.jpg 630w,
+/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/0ede0/salty_egg.jpg 945w,
+/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/3ac88/salty_egg.jpg 1260w,
+/lyhourchhen.github.io/static/8058f3f26913fea3b6a89a73344fe94a/e1596/salty_egg.jpg 2048w"
         sizes="(max-width: 630px) 100vw, 630px"
         style="width:100%;height:100%;margin:0;vertical-align:middle;position:absolute;top:0;left:0;"
         loading="lazy"
